tests/health/gold/sdk/tests__lsp__import_completion_test.toit.gold
tests/lsp/import_completion_test.toit:29:1: error: Failed to import 'core.collections.invalid'
import core.collections.invalid
^~~~~~
tests/lsp/import_completion_test.toit:29:13: note: Cannot enter '<sdk>/core/collections': folder does not exist
import core.collections.invalid
            ^~~~~~~~~~~
